<resources>
    <string name="app_name">宠医生</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="getintomain">进入应用</string>
    <string name="tab_ask">问诊</string>
    <string name="tab_info">资料</string>
    <string name="tab_user">我的</string>
    <string name="phonenumber">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="regist">注册</string>
    <string name="session_done">已完成问诊</string>
    <string name="session_loading">待发送诊断书问诊</string>
    <string name="session_ing">进行中的问诊</string>
    <string name="mypatienttime" >上次问诊:</string>
    <string name="admissions">接诊</string>
    <string name="user_nohavept">宠物主人尚未上传图片</string>
    <string name="send">发送</string>
    <string name="please_input_sendmsg">请输入您的回复</string>
    <string name="photo">图片</string>
    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="please_input_new_pwd_once">请重新输入新密码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="please_input_vcode">请输入验证码</string>
    <string name="i_have_agree">我已同意</string>
    <string name="net_error">网络异常,请重新加载</string>
    <string name="net_null">没有网络,请检查网络设置</string>
</resources>
