<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_login_phone"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_phone" />

            <EditText
                android:id="@+id/et_login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/phonenumber"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login_pwd"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_below="@id/rl_login_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_pwd" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="11"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_below="@+id/rl_login_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/themecolor"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bt_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_login"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="@string/forgetpassword"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/bt_login_regist"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_below="@id/bt_forgetpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/darklightgray"
        android:text="@string/regist"
        android:textSize="16sp"
        android:textColor="@android:color/white" />
</RelativeLayout>