<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_regist"
    android:orientation="vertical">

    <include layout="@layout/public_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_update_password_first"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:background="@null"
            android:hint="@string/please_input_new_pwd"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white" />

        <EditText
            android:id="@+id/et_update_password_second"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:hint="@string/please_input_new_pwd_once"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/et_update_passwor_vcode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:hint="@string/please_input_vcode"
                    android:inputType="number"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white" />
            </LinearLayout>

            <com.petsknow.doctor.commonmodule.view.DelayButton
                android:id="@+id/bt_update_password_getvcode"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/drw_confirm_btn_bg"
                android:enabled="false"
                android:text="@string/get_verify_code"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_update_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/drw_confirm_btn_bg"
            android:text="确定"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>


</LinearLayout>