<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="37dp"
    android:layout_marginRight="37dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="33dp"
            android:layout_height="33dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/login_phone" />
        </RelativeLayout>

        <EditText
            android:id="@+id/regist_phone"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginLeft="7dp"
            android:background="@null"
            android:digits="1234567890"
            android:hint="手机号"
            android:maxLength="11"
            android:phoneNumber="true"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="17sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="17dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="33dp"
            android:layout_height="33dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/login_pwd" />
        </RelativeLayout>

        <EditText
            android:id="@+id/regist_password"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginLeft="7dp"
            android:background="@null"
            android:hint="密码"
            android:maxLength="18"
            android:password="true"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">


            <EditText
                android:id="@+id/regist_verify_code"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/please_input_vcode"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />


        </LinearLayout>

        <com.petsknow.doctor.commonmodule.view.DelayButton
            android:id="@+id/regist_get_verify_code"
            android:layout_width="112dp"
            android:layout_height="37dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/drw_confirm_btn_bg"
            android:enabled="false"
            android:text="@string/get_verify_code"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:padding="3dp"
        android:visibility="visible">

        <CheckBox
            android:id="@+id/register_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/i_have_agree"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/register_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="认证医师行为规范"
            android:textColor="@color/color_4d83be"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@drawable/drw_confirm_btn_bg"
            android:text="注册"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/regist_cancel"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/drw_1_login_registration_background"
            android:text="取消"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>
